# NOTOS_RM_AutoAim

./: .gitignore  AutoAim.cpp  CMakeLists.txt  CodeStandard  Debug.h  ImageInit.cpp  LICENSE  README.md  WatchDog.sh  main.cpp
AngleSolver/: AngleSolver.cpp  AngleSolver.h
Armor/: Armor.h  ArmorBox.cpp  ArmorDetector.cpp  ArmorNumClassifier.cpp  LightBar.cpp  findLights.cpp  matchArmors.cpp
Calibration/: Calibration.cpp  file_images.txt
Filter/: Kalman.cpp  Kalman.h
General/: General.h  camera_params.xml
GraphWindow/: MotionDetection.cpp  MotionDetection.h
MindVision/: cameramain.cpp
MindVision/head/: CameraCapture.h
README/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.jp.md  README.ru.md  README.zh-cn.md  README.zh-tc.md  README.zh.md
Serial/: CRC_Check.cpp  CRC_Check.h  serialport.cpp  serialport.h
hikcam/: hikcam_control.cpp  hikcam_control.h
hikcam/inc/: CameraParams.h  MvCameraControl.h
hikcam/lib/: CommonParameters.ini  MvCameraControl.lib
